maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: not found: value getWorldWitdth
 for (i <- 0 to getWorldWitdth() - 1){
                ^